Add enable-native-access=ALL-UNNAMED to neo4j.conf ()